Update ad container and status messages in rewarded.html

--- a/rewarded.html
+++ b/rewarded.html
@@ -10,13 +10,20 @@
   <div class="container">
     <h2>Watch a short ad to continue</h2>
 
-    <!-- AD CONTAINER -->
+    <!-- VIDEO / REWARDED AD -->
     <div id="ad-container">
-      <!-- Ad network script goes here -->
+      <!-- PropellerAds / other network video here -->
       <p class="loading">Ad is loading…</p>
     </div>
 
-    <p id="timer">Ad will finish in <span>30</span> seconds</p>
+    <p id="status">Watch 30s to unlock</p>
+
+    <button id="closeBtn">Close Ad</button>
+
+    <!-- BANNER AD -->
+    <div id="banner-ad">
+      <!-- banner ad script here -->
+    </div>
   </div>
 
   <script src="script.js"></script>
