--- a/rewarded.html
+++ b/rewarded.html
@@ -18,7 +18,9 @@
 
     <p id="status">Watch 30s to unlock</p>
 
-    <button id="closeBtn">Close Ad</button>
+    <button id="closeBtn" style="display:none;">Close Ad</button>
+    <p id="status">Please wait…</p>
+
 
     <!-- BANNER AD -->
     <div id="banner-ad">
