Clean up rewarded.html by removing comments
Removed commented sections for video and banner ads.

--- a/rewarded.html
+++ b/rewarded.html
@@ -10,22 +10,15 @@
   <div class="container">
     <h2>Watch a short ad to continue</h2>
 
-    <!-- VIDEO / REWARDED AD -->
     <div id="ad-container">
-      <!-- PropellerAds / other network video here -->
       <p class="loading">Ad is loading…</p>
     </div>
 
     <p id="status">Watch 30s to unlock</p>
 
     <button id="closeBtn" style="display:none;">Close Ad</button>
-    <p id="status">Please wait…</p>
 
-
-    <!-- BANNER AD -->
-    <div id="banner-ad">
-      <!-- banner ad script here -->
-    </div>
+    <div id="banner-ad"></div>
   </div>
 
   <script src="script.js"></script>
